# bees

./: .gitignore  Cargo.toml  Dockerfile  Makefile  bees.yaml  readme.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/common/: config.rs  consts.rs  error.rs  icon.rs  mod.rs  nacos.rs  response.rs  types.rs
src/core/: core.rs  http.rs  mod.rs
src/forward/: api.rs  core.rs  dijkstra.rs  forward.rs  local.rs  mod.rs  sync.rs
src/output/: mod.rs
src/output/handlers/: handlers.rs  mod.rs
src/output/handlers/to_es/: mod.rs  save.rs
src/output/handlers/to_kafka/: mod.rs  save.rs
